# langcraft

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  compile_c.sh  compile_rust.sh  mcinterface.h  output.txt
rust_interp/: Cargo.toml  compile_rust.sh
rust_interp/.cargo/: config
rust_interp/src/: lexer.rs  lib.rs  main.rs  parser.rs
src/: __langcraft_on_tick.mcfunction  analysis.rs  cir.rs  compile.rs  compile_ir.rs  interpreter.rs  intrinsics.rs  lib.rs  main.rs  parse.rs  setup.mcfunction
src/cir/: raw_text.rs
src/intrinsic/: and.mcfunction  and_inner.mcfunction  ashr.mcfunction  bcmp.mcfunction  bcmp_inner.mcfunction  llvm_ctlz_i32.mcfunction  llvm_ctlz_i32_inner.mcfunction  llvm_fshr_i32.mcfunction  load_byte.mcfunction  load_halfword.mcfunction  load_halfword_unaligned.mcfunction  load_word_unaligned.mcfunction  lshr.mcfunction  lshr64.mcfunction  memcpy.mcfunction  memcpy_inner.mcfunction  memset.mcfunction  memset_inner.mcfunction  mul_32_to_64.mcfunction  or.mcfunction  or_inner.mcfunction  pop_and_branch.mcfunction  setptr.mcfunction  shift_from_ptr.mcfunction  shift_from_ptr_inner.mcfunction  shl.mcfunction  shl64.mcfunction  store_byte.mcfunction  store_halfword.mcfunction  store_halfword_unaligned.mcfunction  store_word_unaligned.mcfunction  xor.mcfunction  xor_inner.mcfunction
src/stdout/: flush.mcfunction  putc.mcfunction
tests/: add_overflow.bc  arith_shr.bc  dyn_call.bc  fibonacci.bc  fibonacci.rs  func_ptr_cast.bc  func_ptr_direct_cast.bc  sext_8to64.bc  static_link_p1.bc  static_link_p2.bc  tests.rs  token_push.bc  token_push.ll  token_push.rs
tests/c_testsuite/: 00001.c.bc  00002.c.bc  00003.c.bc  00004.c.bc  00005.c.bc  00006.c.bc  00007.c.bc  00008.c.bc  00009.c.bc  00010.c.bc  00011.c.bc  00012.c.bc  00013.c.bc  00014.c.bc  00015.c.bc  00016.c.bc  00017.c.bc  00018.c.bc  00019.c.bc  00020.c.bc  (+123 more)
(+22 files in other folders)
