[package]
name = "langcraft"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

[lib]
name = "langcraft"
path = "src/lib.rs"

[[bin]]
name = "langcraft-bin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saltwater = "0.10"
lazy_static = "1.4.0"