[package]
name = "langcraft"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

[lib]
name = "langcraft"
path = "src/lib.rs"

[[bin]]
name = "langcraft-bin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
llvm-ir = "0.5.3"
either = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.4"